# Skills-Gallery

./: .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cli.js  index.js  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: category-summary.md  fetch_mcp_servers.py  mcp-servers-checkpoint.json  mcp-servers.json  skills-catalog.json
hermes_skills_gallery/: __init__.py  cli.py
scripts/: install.sh
skills_gallery/: __init__.py  cli.py
