[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-gallery"
version = "3.0.0"
description = "Skills Gallery — 1,672+ AI agent skills + 9,185 MCP servers. TUI-enhanced browser with themes, one-command installer. Compatible with 60+ tools."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "uthuman Inc", email = "dev@uthuman.com"}
]
keywords = [
    "skills", "gallery", "ai-skills", "ai-agents", "agent-skills",
    "cli", "terminal", "automation", "developer-tools", "skill-management",
    "hermes-agent", "claude-code", "codex", "gemini-cli", "aider",
    "antigravity", "manus", "multi-agent"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0",
    "click>=8.0",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/uthumany/Skills-Gallery"
Repository = "https://github.com/uthumany/Skills-Gallery"
Issues = "https://github.com/uthumany/Skills-Gallery/issues"
Changelog = "https://github.com/uthumany/Skills-Gallery/blob/master/CHANGELOG.md"

[project.scripts]
skills-gallery = "skills_gallery.cli:main"
skg = "skills_gallery.cli:main"

[tool.setuptools.packages.find]
include = ["skills_gallery*"]

[tool.setuptools.package-data]
skills_gallery = ["data/*.json"]
